javascript-date-update

--- a/Javascript脚本/Script1.htm
+++ b/Javascript脚本/Script1.htm
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>JavaScript1</title>
-    <script language="”javascript”">
+    <script language="javascript">
       function showtime() {
         Tm.value = Date();
       }
     </script>
   </head>
   <body>
-    <input type="text" name="”Tm”" size="20" /><input
+    <input type="text" name="Tm" size="20" /><input
       type="button"
-      onclick="”showtime()”"
+      onclick="showtime()"
       value="”显示当前系统时间”"
     />
   </body>
