--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
       <a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a
       >。
     </p>
+    <button>切换用户</button>
+    <script src="scripts/main.js" defer></script>
   </body>
 </html>
