--- a/HTML-MDN/test.html
+++ b/HTML-MDN/test.html
@@ -1,57 +1,31 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>元数据示例</title>
-
-    <meta name="author" content="Chris Mills" />
-    <meta name="description" content="本示例页面展示网页元数据的用法。" />
-
-    <meta
-      property="og:image"
-      content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png"
-    />
-    <meta
-      property="og:description"
-      content="本示例页面展示网页元数据的用法。"
-    />
-    <meta
-      property="og:title"
-      content="MDN页面 - HTML &lt;head&gt; 元素中的元数据"
-    />
-
-    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
-
-    <link rel="stylesheet" href="style.css" />
-
-    <script src="script.js" defer></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>元数据示例</h1>
-
-    <p>藏语示例：བཀྲ་ཤིས་བདེ་ལེགས།</p>
-    <h1>三国演义</h1>
-
-    <p>罗贯中</p>
-
-    <h2>第一回 宴桃园豪杰三结义 斩黄巾英雄首立功</h2>
-
     <p>
-      话说天下大势，分久必合，合久必分。周末七国分争，并入于秦。及秦灭之后，楚、汉分争，又并入于汉……
+      国王喝得酩酊大醉，在凌晨 1 点时才回到自己的房间，踉跄地走过门口。<span
+        class="editor-note"
+        >[编辑批注：此刻舞台灯光应变暗]</span
+      >.
     </p>
 
-    <h2>第二回 张翼德怒鞭督邮 何国舅谋诛宦竖</h2>
-
-    <p>
-      且说董卓字仲颖，陇西临洮人也，官拜河东太守，自来骄傲。当日怠慢了玄德，张飞性发，便欲杀之……
-    </p>
-
-    <h3>却说张飞</h3>
-
-    <p>
-      却说张飞饮了数杯闷酒，乘马从馆驿前过，见五六十个老人，皆在门前痛哭。飞问其故，众老人答曰：“督邮逼勒县吏，欲害刘公；我等皆来苦告，不得放入，反遭把门人赶打！”……
-    </p>
+    <div class="shopping-cart">
+      <h2>购物车</h2>
+      <ul>
+        <li>
+          <p>
+            <a href=""><strong>银耳环</strong></a
+            >：$99.95.
+          </p>
+          <img src="../products/3333-0985/" alt="Silver earrings" />
+        </li>
+        <li>...</li>
+      </ul>
+      <p>售价：$237.89</p>
+    </div>
   </body>
 </html>
-
-<!-- js与css 需要在head里面插入哦 -->
