--- a/HTML-MDN/new.html
+++ b/HTML-MDN/new.html
@@ -17,15 +17,19 @@
 
       -->
     <address>
+    <class="sender-colunm">
     中国北京市门头沟区，102300
     纽臂大学 纽臂科学院
+    </class>
+
     
     <em>李雷 教授</em>
 </address>
     联系电话：123-456-7890
     电子邮件：no_reply@example.com
-    
+    <class="sender-colunm">
     2019 年 2 月 22 日
+    </class>
     <address>
     <em>韩梅梅 女士</em>
     中国海南省三亚市亚龙湾
@@ -48,9 +52,9 @@
     <h2>学习科目</h2>
     纽臂科学院本着兼容并蓄的原则，课题涉及一些科技领域。欢迎有才智、态度专注的研究人员参加，也欢迎符合我们价值观的朋友加入。我们最感兴趣的课题如下（按优先度排序）：
     <ul>
-    <li>把水（H2O）转变为酒的方法，以及白藜芦醇（C14H12O3）对健康的帮助作用。</li>
-    <li>测量室温 30°C（86°F）时，观众人数呈指数级增加对放克贝斯手表演的影响（3 × 103 > 3 × 104 效应）。</li>
-    <li>使用 HTML 和 CSS 构建乐谱。</li>
+    <li>把水（H<sub>2</sub>O）转变为酒的方法，以及白藜芦醇（C<sub>14</sub>H<sub>12</sub>>O<sub>3</sub>>）对健康的帮助作用。</li>
+    <li>测量室温 30°C（86°F）时，观众人数呈指数级增加对放克贝斯手表演的影响（3 × 10<sup>3</sup>> > 3 × 10<sup>4</sup>> 效应）。</li>
+    <li>使用 <abbr title="超文本标记语言(HyperText Markup Language)">HTML</abbr> 和 <abbr title="层叠样式表 (Cascading Style Sheets)">CSS</abbr> 构建乐谱。</li>
     请针对上述课题提供更多的信息。包括研究时长、所需资源，以及其它未尽事宜，谢谢。
     </ul>
     <h2>异域舞蹈</h2>
