--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <svg width="300" height="200">
+      <rect width="100%" height="100%" fill="green" />
+    </svg>
+  </body>
 </html>
